# stake-deposit-interceptor

./: .gitignore  .solitarc.js  Cargo.toml  package-lock.json  package.json  shank.cjs
.crates/: .crates.toml  .crates2.json
api/: Cargo.toml
api/src/: error.rs  lib.rs  router.rs  utils.rs
api/src/router/: get_deposit_stake_instruction.rs  get_deposit_stake_instructions.rs
cli/: Cargo.toml
crank_server/: main.rs
cranker/: .env
program/: Cargo.toml
program/idl/: stake_deposit_interceptor.json
program/src/: instruction.rs  processor.rs  state.rs
program/tests/: deposit_stake.rs  init_deposit_stake_authority.rs
src/: error.rs  instruction.rs  processor.rs  state.rs
tests/: claim_pool_tokens.rs  deposit_stake.rs  init_deposit_stake_authority.rs  update_deposit_stake_authority.rs  update_owner.rs
tests/helpers/: misc.rs  mod.rs  stake_deposit_interceptor.rs  stake_pool.rs  system.rs
