[package]
name = "stake-deposit-interceptor-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stake-deposit-interceptor-api"
path = "src/bin/main.rs"

[dependencies]
axum = "0.7.9"
clap = { version = "4.5.21", features = ["derive", "env"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
solana-rpc-client = { workspace = true }
thiserror = "1.0.37"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
